--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@react-navigation/stack": "^6.4.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "expo": "~51.0.20",
     "expo-status-bar": "~1.12.1",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-pager-view": "^6.3.3",
+    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
-    "react-native-tab-view": "^3.5.2"
+    "react-native-tab-view": "^3.5.2",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
