--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "intro-react-native",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,26 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-vector-icons/ionicons": "^7.4.0-alpha.16",
-    "@react-navigation/bottom-tabs": "^6.6.0",
-    "@react-navigation/drawer": "^6.7.1",
-    "@react-navigation/material-top-tabs": "^6.6.13",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.10.0",
-    "@react-navigation/stack": "^6.4.0",
     "@reduxjs/toolkit": "^2.2.6",
     "expo": "~51.0.20",
+    "expo-checkbox": "~3.0.0",
+    "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.18",
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-pager-view": "^6.3.3",
-    "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.14.0",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
     "react-redux": "^9.1.2"
   },
