--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
     "expo": "~51.0.20",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
