--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@reduxjs/toolkit": "^2.2.6",
@@ -16,8 +17,10 @@
     "expo": "~51.0.20",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
